--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Minimalista</a>
-        <a class="navbar-brand" href="#">
-            <i class="fas fa-tags"></i> Minimalista
+        <a class="navbar-brand" href="index.html">
+            <img src="compras.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,152 +29,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#computadoras">Computadoras</a>
+                    <a class="nav-link" href="computadoras.html">Computadoras</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#videojuegos">Videojuegos</a>
+                    <a class="nav-link" href="videojuegos.html">Videojuegos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#juguetes">Juguetes</a>
+                    <a class="nav-link" href="juguetes.html">Juguetes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#herramientas">Herramientas</a>
+                    <a class="nav-link" href="herramientas.html">Herramientas</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Sección de Computadoras -->
-    <div id="computadoras" class="section container">
-        <div class="row">
-            <div class="col-md-8">
-                <div id="carouselComputadoras" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 3">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselComputadoras" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselComputadoras" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h3>Computadoras</h3>
-                <p>Descripción de las computadoras. Aquí puedes añadir más detalles sobre las características y especificaciones de las computadoras mostradas en el carrusel.</p>
-            </div>
-        </div>
+    <div class="container">
+        <h1 class="mt-5">Bienvenido a la página principal</h1>
+        <p>Seleccione una de las secciones en el menú para ver más detalles.</p>
     </div>
 
-    <!-- Sección de Videojuegos -->
-    <div id="videojuegos" class="section container">
-        <div class="row">
-            <div class="col-md-8">
-                <div id="carouselVideojuegos" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Videojuego 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Videojuego 2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Videojuego 3">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselVideojuegos" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselVideojuegos" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h3>Videojuegos</h3>
-                <p>Descripción de los videojuegos. Aquí puedes añadir más detalles sobre los juegos mostrados en el carrusel, incluyendo información sobre la trama, el género y las plataformas disponibles.</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Sección de Juguetes -->
-    <div id="juguetes" class="section container">
-        <div class="row">
-            <div class="col-md-8">
-                <div id="carouselJuguetes" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Juguete 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Juguete 2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Juguete 3">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselJuguetes" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselJuguetes" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h3>Juguetes</h3>
-                <p>Descripción de los juguetes. Aquí puedes añadir más detalles sobre los juguetes mostrados en el carrusel, incluyendo información sobre las edades recomendadas, los materiales y las marcas.</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Sección de Herramientas -->
-    <div id="herramientas" class="section container">
-        <div class="row">
-            <div class="col-md-8">
-                <div id="carouselHerramientas" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Herramienta 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Herramienta 2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Herramienta 3">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselHerramientas" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselHerramientas" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h3>Herramientas</h3>
-                <p>Descripción de las herramientas. Aquí puedes añadir más detalles sobre las herramientas mostradas en el carrusel, incluyendo información sobre sus usos, características y marcas.</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Scripts de Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min
