fixing pages & images added for landing page

--- a/electronica.html
+++ b/electronica.html
@@ -37,9 +37,6 @@
                     <a class="nav-link" href="computadoras.html">Computadoras</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="electronica.html">Electronica</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="videojuegos.html">Videojuegos</a>
                 </li>
                 <li class="nav-item">
@@ -47,11 +44,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="herramientas.html">Herramientas</a>
-                </li>     
+                </li>
             </ul>
         </div>
     </nav>
 
+    <!-- Sección de Computadoras -->
     <div class="section container">
         <div class="row">
             <div class="col-md-8">
