--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
-            <img src="compras.png" alt="">
+            <img src="Iconos/compras.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,6 +32,9 @@
                     <a class="nav-link" href="computadoras.html">Computadoras</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="electronica.html">Electronica</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="videojuegos.html">Videojuegos</a>
                 </li>
                 <li class="nav-item">
@@ -39,16 +42,58 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="herramientas.html">Herramientas</a>
-                </li>
+                </li>     
             </ul>
         </div>
     </nav>
 
-    <div class="container">
-        <h1 class="mt-5">Bienvenido a la página principal</h1>
-        <p>Seleccione una de las secciones en el menú para ver más detalles.</p>
-    </div>
-
+    <div class="container mt-5">
+        <div class="jumbotron">
+          <h1 class="display-4"><strong>¡Bienvenid@! </strong></h1>
+          <p class="lead">Nos complace recibirte en nuestra catalogo en línea, tenemos los siguientes articulos en venta:</p>
+          <div class="col-md-12">
+            <div class="mx-auto" style="max-width: 800px;">
+            <div id="carouselComputadoras" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active"> 
+                        <p><strong>Computadoras </strong></p>
+                        <img src="Iconos/computadora.webp" class="d-block w-100" alt="Computadoras">
+                    </div>                  
+                    <div class="carousel-item">
+                        <p><strong>Electronica</strong></p>
+                        <img src="Iconos/electronicos.webp" class="d-block w-100" alt="Electronica">
+                    </div>
+                    <div class="carousel-item">
+                        <p><strong>Videojuegos</strong></p>
+                        <img src="Iconos/videos.webp" class="d-block w-100" alt="Videojuegos">
+                    </div>
+                    <div class="carousel-item">
+                        <p><strong>Juguetes </strong></p>
+                        <img src="Iconos/juguetes.jpeg" class="d-block w-100" alt="Juguetes">
+                    </div>
+                    <div class="carousel-item">
+                        <p><strong>Herramientas </strong></p>
+                        <img src="Iconos/herramienta.webp" class="d-block w-100" alt="Herramientas">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselComputadoras" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselComputadoras" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        </div>
+          <hr class="my-4">
+          <p>Gracias por visitarnos</p>
+        </div>
+      </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
