--- a/juguetes.html
+++ b/juguetes.html
@@ -26,7 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
-            <img src="compras.png" alt="">
+            <img src="Iconos/compras.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,6 +37,9 @@
                     <a class="nav-link" href="computadoras.html">Computadoras</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="electronica.html">Electronica</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="videojuegos.html">Videojuegos</a>
                 </li>
                 <li class="nav-item">
@@ -44,7 +47,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="herramientas.html">Herramientas</a>
-                </li>
+                </li>     
             </ul>
         </div>
     </nav>
