--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p class="lead">Nos complace recibirte en nuestra catalogo en línea, tenemos los siguientes articulos en venta:</p>
           <div class="col-md-12">
             <div class="mx-auto" style="max-width: 800px;">
-            <div id="carouselComputadoras" class="carousel slide" data-ride="carousel">
+            <div id="carouselComputadoras" class="carousel slide" data-ride="carousel"  data-interval="3000">
                 <div class="carousel-inner">
                     <div class="carousel-item active"> 
                         <p><strong>Computadoras </strong></p>
