--- a/electronica.html
+++ b/electronica.html
@@ -94,7 +94,7 @@
         <br />
         <div class="row">
             <div class="col-md-8">
-                <div id="AppleMagicMouse" class="carousel slide" data-ride="carousel">
+                <div id="AppleMagicMouse" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/AppleMagicMouse2-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -130,7 +130,7 @@
         <br />
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -172,7 +172,7 @@
         <br />
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -209,9 +209,12 @@
                 <p>Precio : $</p>
             </div>
         </div>
+        <br />
+        <br />
+        <br />
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -248,9 +251,12 @@
                 <p>Precio : $</p>
             </div>
         </div>
+        <br />
+        <br />
+        <br />
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -287,93 +293,12 @@
                 <p>Precio : $</p>
             </div>
         </div>
+        <br />
+        <br />
+        <br />
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="imagenes/Electronica/Adaptador9En1-2.jpg" class="d-block w-100" alt="Adaptador9En1-2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="imagenes/Electronica/Adaptador9En1-3.jpg" class="d-block w-100" alt="Adaptador9En1-3">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="imagenes/Electronica/Adaptador9En1-4.jpg" class="d-block w-100" alt="Adaptador9En1-4">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselAdaptador9En1" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselAdaptador9En1" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h3>Adaptador 9 en 1</h3>
-                <p>Descripción</p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>Precio : $</p>
-            </div>
-        </div>
-        <br/>
-        <br/>
-        <br/>
-        <div class="row">
-            <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="imagenes/Electronica/Adaptador9En1-2.jpg" class="d-block w-100" alt="Adaptador9En1-2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="imagenes/Electronica/Adaptador9En1-3.jpg" class="d-block w-100" alt="Adaptador9En1-3">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="imagenes/Electronica/Adaptador9En1-4.jpg" class="d-block w-100" alt="Adaptador9En1-4">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselAdaptador9En1" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselAdaptador9En1" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h3>Adaptador 9 en 1</h3>
-                <p>Descripción</p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>Precio : $</p>
-            </div>
-        </div>
-        <br/>
-        <br/>
-        <br/>
-        <div class="row">
-            <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -415,7 +340,7 @@
         <br/>
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -457,7 +382,7 @@
         <br/>
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -499,7 +424,7 @@
         <br/>
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
@@ -541,7 +466,91 @@
         <br/>
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/Adaptador9En1-2.jpg" class="d-block w-100" alt="Adaptador9En1-2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/Adaptador9En1-3.jpg" class="d-block w-100" alt="Adaptador9En1-3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/Adaptador9En1-4.jpg" class="d-block w-100" alt="Adaptador9En1-4">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselAdaptador9En1" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselAdaptador9En1" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h3>Adaptador 9 en 1</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-md-8">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/Adaptador9En1-2.jpg" class="d-block w-100" alt="Adaptador9En1-2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/Adaptador9En1-3.jpg" class="d-block w-100" alt="Adaptador9En1-3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Electronica/Adaptador9En1-4.jpg" class="d-block w-100" alt="Adaptador9En1-4">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselAdaptador9En1" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselAdaptador9En1" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h3>Adaptador 9 en 1</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="row">
+            <div class="col-md-8">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
