--- a/herramientas.html
+++ b/herramientas.html
@@ -56,33 +56,41 @@
     <div class="section container">
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselHerramientas" class="carousel slide" data-ride="carousel">
+                <div id="pinzasPonchar" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 1">
+                            <img src="imagenes/Electronica/PinzasPonchar-1.jpg" class="d-block w-100" alt="pinzas frente">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 3">
+                            <img src="imagenes/Electronica/PinzasPonchar-2.jpg" class="d-block w-100" alt="pinzas espalda">
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselComputadoras" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#pinzasPonchar" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselComputadoras" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#pinzasPonchar" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
             </div>
             <div class="col-md-4">
-                <h3>Herramientas</h3>
-                <p>Descripción de las computadoras. Aquí puedes añadir más detalles sobre las características y especificaciones de las computadoras mostradas en el carrusel.</p>
+                <h3>Adaptador 9 en 1</h3>
+                <p>Descripción</p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>- </p>
+                <p>Precio : $</p>
             </div>
         </div>
+        <br />
+        <br />
+        <br />
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
