fixinf electronica page

--- a/electronica.html
+++ b/electronica.html
@@ -37,6 +37,9 @@
                     <a class="nav-link" href="computadoras.html">Computadoras</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="electronica.html">Electronica</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="videojuegos.html">Videojuegos</a>
                 </li>
                 <li class="nav-item">
@@ -44,7 +47,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="herramientas.html">Herramientas</a>
-                </li>
+                </li>     
             </ul>
         </div>
     </nav>
