--- a/electronica.html
+++ b/electronica.html
@@ -81,14 +81,16 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h3>Adaptador 9 en 1</h3>
+                <h3>Weikoo Adaptador 9 en 1</h3>
                 <p>Descripción</p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
+                <p>- Puerto de entrada USB - C</p>
+                <p>- Puerto salida HDMI</p>
+                <p>- 2 USB 3.0</p>
+                <p>- RJ-45</p>
+                <p>- Conector audio</p>
+                <p>- VGA</p>
+                <p>- Lector tarjetas SD</p>
+                <p>- Lector tarjetas TF</p>
                 <p>Precio : $</p>
             </div>
         </div>
@@ -119,12 +121,12 @@
             <div class="col-md-4">
                 <h3>Apple Magic Mouse 2</h3>
                 <p>Descripción</p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
+                <p>- Ratón ergonómico y delgado con construcción unibody de aluminio. </p>
+                <p>- Superficie multitáctil que permite gestos como deslizar y hacer clic.</p>
+                <p>- Conexión inalámbrica Bluetooth</p>
+                <p>- Batería recargable integrada con puerto Lightning para recarga</p>
+                <p>- Sensores ópticos para un seguimiento preciso en diversas superficies</p>
+                <p>- Indicador LED para mostrar el estado de la batería</p>
                 <p>Precio : $</p>
             </div>
         </div>
@@ -158,12 +160,9 @@
             <div class="col-md-4">
                 <h3>Cargador Inalambrico Samsung</h3>
                 <p>Descripción</p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
+                <p>- Dimesiones 0,8 x 7,1 x 7,1 cm; 48 g </p>
+                <p>- WPC Qi-Certified 1.1</p>
+                <p>- Input: 5V / 2A, Output: 5W</p>
                 <p>Precio : $</p>
             </div>
         </div>
@@ -195,14 +194,12 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h3>Apple Cargador MAge Safe</h3>
+                <h3>Apple Cargador MagSafe</h3>
                 <p>Descripción</p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
+                <p>- Diseñado para ser compatible con MacBook Pro y MacBook Air equipados con puertos MagSafe.</p>
+                <p>- Utiliza un conector MagSafe, que se magnetiza y se conecta de forma segura al puerto correspondiente en el MacBook.</p>
+                <p>- Incorpora medidas de seguridad para proteger el dispositivo de sobrecargas, sobretensiones y cortocircuitos.</p>
+                <p>- Compatible con MacBook Pro (modelos con puertos MagSafe) y MacBook Air (modelos con puertos MagSafe)</p>
                 <p>Precio : $</p>
             </div>
         </div>
@@ -234,14 +231,9 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h3>Adaptador DisplayPort-HDMI</h3>
+                <h3>Adaptador DisplayPort-HDMI 1</h3>
                 <p>Descripción</p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
+                <p>- Cable adaptador displayport a HDMI funciona para Macbook como para PC </p>
                 <p>Precio : $</p>
             </div>
         </div>
@@ -273,14 +265,9 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h3>Adaptador DisplayPort-HDMI</h3>
+                <h3>Adaptador DisplayPort-HDMI 2</h3>
                 <p>Descripción</p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
-                <p>- </p>
+                <p>- Cable adaptador displayport a HDMI funciona para Macbook como para PC </p>
                 <p>Precio : $</p>
             </div>
         </div>
