--- a/videojuegos.html
+++ b/videojuegos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalogo</title>
-    <link rel="icon" href="Iconos/catologo.png" type="image/x-icon">
+    <title>Videojuegos</title>
+    <link rel="icon" href="Iconos/juego.png" type="image/x-icon">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
