--- a/computadoras.html
+++ b/computadoras.html
@@ -56,23 +56,41 @@
     <div class="section container">
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselComputadoras" class="carousel slide" data-ride="carousel">
+                <div id="computadora1" class="carousel slide" data-ride="carousel" data-interval="45000">
                     <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img src="imagenes/Computadoras/Gi-PC-1.mp4" class="d-block w-100"  style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Computadoras/Gi-PC-2.mp4" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
                         <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 1">
+                            <img src="imagenes/Computadoras/Gi-PC-3.png" class="d-block w-100" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 2">
+                            <img src="imagenes/Computadoras/Gi-PC-4.png" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/800x500" class="d-block w-100" alt="Computadora 3">
+                            <img src="imagenes/Computadoras/Gi-PC-5.png" class="d-block w-100" style="max-width: 500px; height: auto;" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Computadoras/Gi-PC-6.png" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Computadoras/Gi-TarjetaMadre-1.png" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Computadoras/Gi-Procesador-1.png" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="imagenes/Computadoras/Gi-PC-6.png" class="d-block w-100" alt="">
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselComputadoras" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#computadora1" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselComputadoras" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#computadora1" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
