--- a/electronica.html
+++ b/electronica.html
@@ -56,7 +56,7 @@
     <div class="section container">
         <div class="row">
             <div class="col-md-8">
-                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel">
+                <div id="carouselAdaptador9En1" class="carousel slide" data-ride="carousel" data-interval="3000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="imagenes/Electronica/Adaptador9En1-1.jpg" class="d-block w-100" alt="Adaptador9En1-1">
