--- a/computadoras.html
+++ b/computadoras.html
@@ -162,7 +162,7 @@
             <p>Descripción</p>
             <p>- <a href="https://www.aorus.com/es-mx/motherboards/B450-AORUS-M-rev-1x/Key-Features" target="_blank"> Tarjeta Madre Aorus B450 M </a></p>
             <p>- <a href="https://www.amazon.com.mx/Procesador-AMD-RYZEN-3-6Ghz-Socket/dp/B07B428V2L" target="_blank"> AMD Ryzen 5 2600X Six-Core Processor 3.60 GHz  </a></p>
-            <p>- <a href="https://www.amazon.com.mx/Corsair-Vengeance-CMW16GX4M2C3200C16W-3200MHz-m%C3%B3dulo/dp/B07D5SN1ZK" target="_blank"> CORSAIR VENGEANCE RGB PRO 16GB (2x8GB) DDR4 3200MHz  </a></p>
+            <p>- CORSAIR VENGEANCE RGB PRO 16GB </p>
             <p>- <a href="https://www.nvidia.com/en-gb/geforce/graphics-cards/geforce-gtx-1070/specifications/" target="_blank"> GE Force GTX 1070 </a></p>
             <p>- <a href="https://www.cyberpuerta.mx/Computo-Hardware/Componentes/Enfriamiento-y-Ventilacion/Enfriamiento-Liquido/Corsair-Hydro-Series-H60-Enfriamiento-Liquido-para-CPU-1x-120mm-1700RPM.html" target="_blank"> Corsair Hydro Series H60 Enfriamiento Liquido para CPU, 1x 120mm, 1700RPM </a></p>
             <p>- <a href="https://www.cyberpuerta.mx/index.php?cl=details&anid=75447de8ff5cd3da0a4ea1f219c7476b&utm_source=deliveredwaybill&utm_medium=email&utm_campaign=deliveredwaybill" target="_blank"> Disco duro Barracuda 2TB </a></p>
